# kindredspirit

./: .gitignore  .merlin  README.md  _tags  animation.ml  animation.mli  animations.ml  audio.ml  beat_detection.ml  beat_detection.mli  beat_detection_helper.ml  bits.ml  build.sh  build_pp_ctl.sh  color.ml  color.mli  color_picker.ml  color_picker.mli  coordinate.ml  coordinate.mli  dune  kindredspirit.ml  kindredspirit.opam  model.csv  model.ml  model.mli  pixel_pusher.ml  pixel_pusher.mli  ppctl.ml  ppdriver.ml  start.sh  thinkpad_t420.sexp  virtual_pixel.ml  virtual_pixel.mli  watchdog.ml  waveform.ml  waveform.mli
configs/: mbp_late2011.sexp  thinkpad_sl410.sexp  thinkpad_t420.sexp
pixelrc/: install.sh
pixelrc/0/: pixel.rc
pixelrc/1/: pixel.rc
pixelrc/2/: pixel.rc
pixelrc/3/: pixel.rc
pixelrc/4/: pixel.rc
pixelrc/5/: pixel.rc
pixelrc/6/: pixel.rc
pixelrc/7/: pixel.rc
