opam-version: "2.0"
version: "1.0"
synopsis: "Kindred Spirit Graphics"
description: """
Kindred Spirit Graphics Console

This drives the Pixel Pushers
"""
maintainer: "Michael Bacarella <michael.bacarella@gmail.com>"
authors: ["Michael Bacarella <michael.bacarella@gmail.com>"]
homepage: "https://github.com/mbacarella/kindredspirit"
bug-reports: "Michael Bacarella <michael.bacarella@gmail.com>"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "async"
  "core"
  "fftw3"
  "lablgl"
  "fftw3"
  "portaudio"
]
